# latchlm

./: .gitignore  Cargo.toml  README.md  deny.toml  devenv.nix  flake.nix
.cargo/: config.toml
.github/workflows/: book.yaml  main.yaml
core/: Cargo.toml  README.md
core/src/: error.rs  lib.rs
docs/: book.toml
docs/src/: SUMMARY.md  errors.md  intro.md  license.md
docs/src/architecture/: models.md  overview.md  providers.md
docs/src/architecture/providers/: first-party-providers.md  implement-your-own-provider.md
gemini/: Cargo.toml  README.md
gemini/src/: lib.rs  response.rs  settings.rs
gemini/tests/: gemini_client.rs
gemini/tests/gemini/: main.rs
latchlm/: Cargo.toml  README.md
latchlm/src/: lib.rs
macros/: Cargo.toml
macros/src/: lib.rs
macros/tests/: test.rs
macros/tests/compile_fail/: duplicate_id.rs  duplicate_id.stderr  missing_attributes.rs  missing_attributes.stderr  missing_id.rs  missing_id.stderr  missing_name.rs  missing_name.stderr  struct.rs  struct.stderr
macros/tests/pass/: basic.rs
openai/: Cargo.toml
openai/src/: lib.rs  response.rs
openai/tests/: openai_client.rs
openrouter/: Cargo.toml
openrouter/src/: lib.rs  response.rs
openrouter/tests/: openrouter_client.rs
xtask/: Cargo.toml
xtask/src/: main.rs
