[workspace]
resolver = "3"
members = [
    "latchlm",
    "core",
    "gemini",
    "openai",
    "xtask",
    "macros",
    "openrouter",
]

[workspace.package]
edition = "2024"
license = "MPL-2.0"
authors = ["Mario Cerulo <mario@mcerulo.com>"]
repository = "https://github.com/MarioCerulo/latchlm"
keywords = ["ai", "llm", "api"]
categories = ["api-bindings", "asynchronous"]

[workspace.dependencies]
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"

tokio = { version = "1.48", features = ["macros", "rt-multi-thread"] }
secrecy = "0.10.3"
wiremock = "0.6"
proptest = "1.9"
eventsource-stream = "0.2.3"

[workspace.dependencies.reqwest]
version = "0.12"
default-features = false
features = ["json", "rustls-tls"]
