[package]
name = "latchlm-core"
version = "0.2.0"
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
description = "Core traits and types for the LatchLM ecosystem"
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
publish = true

[dependencies]
thiserror = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
futures.workspace = true

[package.metadata.workspaces]
independent = true

[lints]
workspace = true
