[package]
name = "latchlm-gemini"
description = "Google Gemini provider implementation for LatchLM"
version = "0.1.0"
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
publish = false

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
reqwest = { workspace = true }
secrecy = { workspace = true }
latchlm-core = "0.2.0"

[dev-dependencies]
wiremock = { workspace = true }
tokio = { workspace = true }
