[package]
name = "latchlm-gemini"
description = "Google Gemini provider implementation for LatchLM"
version = "0.1.0"
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
publish = false

[features]
# Enable internal testing utilities.
# WARNING:This feature is not subject to semantic versioning and
# it's intended for testing and mocking purposes only and should not
# be used in ptoduction code. Its signature is not guaranteed to be stable.
test-utils = []

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
secrecy = { workspace = true }
latchlm-core = { path = "../core" }
latchlm-macros = { path = "../macros" }

[dev-dependencies]
wiremock = { workspace = true }
tokio = { workspace = true }
proptest = { workspace = true }
latchlm-gemini = { path = ".", features = ["test-utils"] }
