[package]
name = "latchlm"
version = "0.1.0"
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
description = "A provider-agnostic client library for AI models"
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
publish = true

[features]

[dependencies]
latchlm-core = { version = "0.2.0" }

thiserror = { workspace = true }
