[package]
name = "latchlm-macros"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "2" }
quote = "1"
proc-macro2 = "1"

[dev-dependencies]
trybuild = "1"
serde.workspace = true

latchlm-core = { path = "../core", version = "0.2.0" }

[lints]
workspace = true
