[package]
name = "latchlm-openai"
description = "OpenAI provider implementation for LatchLM"
version = "0.1.0"
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
publish = false

[features]
# Enable internal testing utilities.
# WARNING:This feature is not subject to semantic versioning and
# it's intended for testing and mocking purposes only and should not
# be used in production code. Its signature is not guaranteed to be stable.
test-utils = []
tracing = ["dep:tracing"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
secrecy.workspace = true
futures.workspace = true
eventsource-stream.workspace = true
tracing = { workspace = true, optional = true }

latchlm-core = { path = "../core", version = "0.2.0" }
latchlm-macros = { path = "../macros", version = "0.1.0" }

[dev-dependencies]
wiremock.workspace = true
tokio.workspace = true
proptest.workspace = true
latchlm-openai = { path = ".", features = ["test-utils"] }

[lints]
workspace = true
