[package]
name = "latchlm-openrouter"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
# Enable internal testing utilities.
# WARNING:This feature is not subject to semantic versioning and
# it's intended for testing and mocking purposes only and should not
# be used in ptoduction code. Its signature is not guaranteed to be stable.
test-utils = []

[dependencies]
serde.workspace = true
serde_json.workspace = true
reqwest = { workspace = true, features = ["stream"] }
secrecy.workspace = true
futures.workspace = true
eventsource-stream.workspace = true
latchlm-core = { path = "../core", version = "0.2.0" }

[dev-dependencies]
wiremock.workspace = true
tokio.workspace = true
proptest.workspace = true
latchlm-openrouter = { path = ".", features = ["test-utils"] }

[lints]
workspace = true
